build: replace inkscape with rsvg-convert
Do not require having the graphical application inkscape and all its
dependencies installed, just to convert svgs to pdfs. This is still the
default in dblatex, even though converting on the command-line with
inkscape is deprecated. Use the lightweight rsvg-convert instead.

Merge at the same time as the docker-playground patch.

Depends: docker-playground I012c61eb777e6dc267dd4a52500da98c01ac1438
Change-Id: I0d132f8f6fd73fbe14b5bfa10a8659acaddf38f7

--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Build-Depends: autotools-dev,
                dblatex,
                docbook5-xml,
                graphviz,
-               inkscape,
+               librsvg2-bin,
                libxml2-utils,
                mscgen,
                python3-nwdiag,
@@ -28,7 +28,7 @@ Depends: ${misc:Depends},
          dblatex,
          docbook5-xml,
          graphviz,
-         inkscape,
+         librsvg2-bin,
          libxml2-utils,
          mscgen,
          python3-nwdiag,
